--- a/Client/fptsocial/src/index.css
+++ b/Client/fptsocial/src/index.css
@@ -25,6 +25,28 @@ body {
   .cs-badge-circle {
     @apply text-xs text-center rounded-full px-1;
   }
+  
+  /* .epr-body::-webkit-scrollbar {
+    width: 10px !important;
+    height: 15px !important;
+  }
+
+  .epr-body {
+      scrollbar-gutter: auto !important;
+  }
+
+  .epr-body::-webkit-scrollbar-thumb {
+      background: transparent !important;
+      border-radius: 100vh !important;
+      border: 1px solid #f6f7ed !important;
+  }
+
+  .epr-body:hover::-webkit-scrollbar-thumb {
+      background: rgb(242,113,36) !important;
+  } */
+
+
+
 
   .scrollbar-none-track::-webkit-scrollbar {
     width: 10px;
