(FE)Add feature friend sending

--- a/Client/fptsocial/src/index.css
+++ b/Client/fptsocial/src/index.css
@@ -44,9 +44,9 @@ body {
   .epr-body:hover::-webkit-scrollbar-thumb {
       background: rgb(242,113,36) !important;
   } */
-
-
-
+  /* .m_539e827b:where([data-active]){
+    border-bottom: 2px solid red !important;
+  } */
 
   .scrollbar-none-track::-webkit-scrollbar {
     width: 10px;
